@@ -58,10 +58,7 @@
 #undef CONFIG_RTAI_HW_TIMER_LATENCY
 
 /* Kconfig */
-#undef CONFIG_RTAI_HW_X86_VSYSCALL
-
-/* Kconfig */
-#undef CONFIG_RTAI_HW_X86_VSYSCALL_HARDWIRED
+#undef CONFIG_RTAI_HW_X86_SEP
 
 /* Kconfig */
 #undef CONFIG_RTAI_OPT_COMPAT_FIFO
