@@ -1,5 +1,12 @@
 2005-08-20  Philippe Gerum  <rpm@xenomai.org>
 
+	* include/nucleus/asm-i386/syscall.h: Simplify the configuration
+	by removing the adaptive VSYSCALL support: this made little sense,
+	since RT users will/must know which capabilities their respective
+	targets have. Replace all the hairy VSYSCALL-related switches by a
+	single SEP-related one: i.e., either one activates SEP and has
+	NPTL, or disables them. No middle choice anymore.
+
 	* skins/posix/syscall.c: Set __pthread_setschedparam as
 	conforming.
 
